Fix overflow-x on desktop

--- a/src/main/resources/static/result.css
+++ b/src/main/resources/static/result.css
@@ -139,7 +139,7 @@ button:hover {
 /* Tablas Responsivas */
 .table-container {
     width: 100%;
-    overflow-x: auto;
+    overflow-x: hidden;
     -webkit-overflow-scrolling: touch;
 }
 
